implement customers api
