# src/main/java/com/epam/jpop/customer/model/AddressType.java
@@ -1,0 +1,5 @@
+package com.epam.jpop.customer.model;
+
+public enum AddressType {
+    HOME, OFFICE
+}
