# src/main/resources/static/api.yaml
@@ -5,8 +5,6 @@ info:
   license:
     name: Apache 2.0
     url: http://www.apache.org/licenses/LICENSE-2.0.html
-servers:
-  - url: https://localhost:8080
 tags:
   - name: Customer
     description: customer service rest api
@@ -26,7 +24,7 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/Customer'
+                  $ref: '#/components/schemas/CustomerDTO'
     post:
       tags:
         - customers
@@ -38,15 +36,15 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Customer'
+              $ref: '#/components/schemas/CustomerDTO'
         required: true
       responses:
-        '200':
+        '201':
           description: Successful operation
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Customer'
+                $ref: '#/components/schemas/CustomerDTO'
         '405':
           description: Invalid input
   /customers/{customerId}:
@@ -70,7 +68,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Customer'
+                $ref: '#/components/schemas/CustomerDTO'
         '400':
           description: Invalid ID supplied
         '404':
@@ -94,7 +92,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Customer'
+              $ref: '#/components/schemas/CustomerDTO'
         required: true
       responses:
         '405':
@@ -118,7 +116,7 @@ paths:
           description: Invalid customer id value
 components:
   schemas:
-    Customer:
+    CustomerDTO:
       type: object
       properties:
         id:
@@ -137,11 +135,11 @@ components:
         mobile:
           type: string
           example: "+919876543210"
-        address:
+        addresses:
           type: array
           items:
-            $ref: '#/components/schemas/Address'
-    Address:
+            $ref: '#/components/schemas/AddressDTO'
+    AddressDTO:
       type: object
       properties:
         street:
@@ -180,4 +178,4 @@ components:
       content:
         application/json:
           schema:
-            $ref: '#/components/schemas/Customer'
+            $ref: '#/components/schemas/CustomerDTO'
